--- a/src/style.css
+++ b/src/style.css
@@ -167,6 +167,7 @@ body {
   border-color: var(--green);
   padding-left: 1rem;
   padding-right: 1rem;
+  margin-bottom: .5rem;
 }
 .btn-buy:hover,
 .btn-buy:focus {
@@ -289,6 +290,7 @@ body {
 }
 .product-page .custom-btn {
   border-radius: 20px;
+  font-weight: 500;
 }
 .product-page .custom-tag {
   background-color: var(--bs-secondary);
