--- a/src/style.css
+++ b/src/style.css
@@ -250,7 +250,7 @@ body {
   padding-bottom: .5rem;
 }
 .product-card .card-body {
-  padding: .5rem .5rem 0;
+  padding: .75rem .5rem;
 }
 .product-card .card-title {
   font-size: .9rem;
