--- a/src/style.css
+++ b/src/style.css
@@ -221,10 +221,10 @@ body {
   gap: .375rem;
 }
 .product-card {
-  background-color: #f7f8f9;
+  background-color: var(--bs-white); /*#f7f8f9;*/
   color: #212529;
   border: 1px solid #eee;
-  border-radius: 4px;
+  border-radius: 8px;
   height: 100%;
   box-shadow: var(--bs-box-shadow-sm);
 }
@@ -234,7 +234,7 @@ body {
   margin: 0;
 }
 .product-card .card-img-top {
-  background-color: var(--bs-white); /*#eff1f5*/
+  background-color: #f7f8f9;; /*#eff1f5*/
   position: absolute;
   top: 0;
   left: 0;
@@ -242,8 +242,8 @@ body {
   height: 100%;
   /*border: 1px solid #e5e7eb;*/
   object-fit: scale-down;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   padding-top: .5rem;
