--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,7 @@ body {
   margin-bottom: 0;
 }
 
+
 /* ***** SOCIAL NETWORKS ***** */
 .social {
   position: relative;
@@ -167,6 +168,7 @@ body {
 	margin-bottom: 0;
 	text-align: left;	
   padding-bottom: .25rem;
+  padding-right: .75rem;
 	border-bottom: 2px solid var(--green-shade-300);	
 }
 .btn-back {
@@ -226,7 +228,8 @@ body {
   border: 1px solid #eee;
   border-radius: 4px;
   height: 100%;
-  box-shadow: var(--bs-box-shadow-sm);
+  /*box-shadow: var(--bs-box-shadow-sm);*/
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,.12);
 }
 .product-card .card-img-container {	
 	position: relative;
@@ -359,6 +362,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: scale-down;
+  border-radius: 4px;
 }
 
 
