--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ body {
   position: relative
 }
 .shipment-description {
-  font-size: .85rem;
+  font-size: .8rem;
   font-weight: 600;
   letter-spacing: 1pt;
   margin-bottom: 0;
@@ -73,6 +73,7 @@ body {
   display: flex;
   gap: .75rem;
   margin-bottom: 0;
+  padding-left: 0;
 }
 .social ul li {
   list-style: none;
@@ -88,15 +89,15 @@ body {
   align-items: center;
   flex-direction: column;
 	color: var(--bs-white);
-  padding: 1rem 1.25rem;
-}
-.company-logo {
-  margin-bottom: .5rem;
+  padding: 1.25rem 1.25rem;
 }
 .company-logo img {
   height: 60px;
   width: auto;
   border-radius: 50%;
+}
+.company-logo + .company-info {
+  margin-top: .5rem;
 }
 .company-info {
   text-align: center;
@@ -133,6 +134,10 @@ body {
 
 
 /* ***** FOOTER ***** */
+.footer {
+  background-color: var(--brown);
+  color: var(--bs-white);
+}
 .sponsors {
   background-color: var(--green);
   color: var(--bs-white);
@@ -143,11 +148,18 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: var(--brown);
-  color: var(--bs-white);
-  padding: 1rem 1.25rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   font-size: .9rem;
   text-align: center;
+}
+.copyright .author {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.copyright .copy {
+  font-size: .85rem;
+  text-transform: uppercase;
 }
 
 
@@ -451,7 +463,7 @@ body {
 }
 @media (min-width: 768px) { 
   .company-logo img {
-    height: 80px;
+    height: 75px;
   }
   .product-grid {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -482,6 +494,9 @@ body {
   }
   .nutrition-facts {
     max-width: 350px;
+  }
+  .copyright {
+    justify-content: space-between;
   }
 }
 @media (max-width: 992px) {
